--- a/extension/media/styles/vscode.css
+++ b/extension/media/styles/vscode.css
@@ -97,4 +97,5 @@ hr {
   width: 100%;
   height: 100vh;
   overflow-y: scroll;
+  scrollbar-color: var(--vscode-scrollbarSlider-activeBackground) rgba(130, 130, 130, 0.1);
 }
